     + close_all()

 * FTPServer.server_forever() and FTPServer.close_all() are no longer class
   methods (XXX still not sure)

 * asyncore.dispatcher and asynchat.async_chat classes has been replaced by:
     - pyftpdlib.lib.ioloop.Acceptor
     - pyftpdlib.lib.ioloop.Connector
     - pyftpdlib.lib.ioloop.AsyncChat
   Any customization relying on asyncore or its IO loop will no longer work.

 * pyftpdlib.ftpserver.CallLater and pyftpdlib.ftpserver.CallEvery are
   deprecated. Instead, use self.ioloop.call_later() and self.ioloop.call_every()
   from withing FTPHandler.  Also delay() method of the returned object has
   been removed.


Version: 0.7.0 - Date: 2012-01-25
---------------------------------

Enhancements:

 * Issue #152: uploads (from server to client) on UNIX are now from 2x (Linux)
   to 3x (OSX) faster because of sendfile(2) system call usage.

 * Issue #155: AbstractedFS "root" and "cwd" are no longer read-only properties
   but can be set via setattr().

 * Issue #168: added FTPHandler.logerror() method. It can be overridden to
   provide more information (e.g. username) when logging exception tracebacks.

 * Issue #174: added support for SITE CHMOD command (change file mode).

 * Issue #177: setuptools is now used in setup.py

 * Issue #178: added anti flood script in demo directory.

 * Issue #181: added CallEvery class to call a function every x seconds.

 * Issue #185: pass Debian licenscheck tool.

 * Issue #189: the internal scheduler has been rewritten from scratch and it is
   an order of magnitude faster, especially for operations like cancel() which
   are involved when clients are disconnected (hence invoked very often).
   Some benchmarks:
       schedule   : +0.5x
       reschedule : +1.7x
       cancel     : +477x  (with 1 milion scheduled functions)
       run:       : +8x
    Also, a single scheduled function now consumes 1/3 of the memory thanks
    to __slots__ usage.
